welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:6: error: not found: value dessineV
	dessineV()
        ^PictureMono:11: error: not found: value nbPas
	nbPas = nbPas + 1;
        ^PictureMono:13: error: not found: value nbPas
	nbPas = nbPas + 1;
        ^PictureMono:16: error: not found: value nbPas
	nbPas = nbPas + 1;
        ^PictureMono:18: error: not found: value nbPas
	nbPas = nbPas + 1;
        ^PictureMono:21: error: not found: value nbPas
	nbPas = nbPas + 1;
        ^PictureMono:23: error: not found: value nbPas
	nbPas = nbPas + 1;
        ^PictureMono:25: error: not found: value nbPas
	if ( nbPas == 1 || nbPas == 3 || nbPas == 5) {
             ^